fdo#39056 fdo#75431 Section Properties if section starts with table

Section properties are not imported if the section starts with a table for DOCX,
and also for a few RTF files with combination of tables and section breaks.
SwXBodyText::createTextCursorByRange is not able to find the start of section and hence
section properties are not applied.

As a workaround added an empty paragraph at the beginning of every section
which has the the first element as a table. And then removed it when the
section ends ( DomainMapper::lcl_endSectionGroup is called).

Also handled to add the paragraph earlier, if there is a bookmark
so that the bookmark is not attached to the dummy paragraph.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Reviewed on:
	https://gerrit.libreoffice.org/9097

Conflicts:

	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
	writerfilter/source/dmapper/DomainMapper.cxx

Change-Id: I717ba40e22b055d974bc83d4414aeb2945e16d26