writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -391,6 +391,8 @@ private:
     /// If the current paragraph has any runs.
     bool                            m_bParaChanged;
     bool                            m_bIsFirstParaInSection;
+    bool                            m_bDummyParaAddedForTableInSection;
+    bool                            m_bTextFrameInserted;
     bool                            m_bIsLastParaInSection;
     bool                            m_bIsInComments;
     /// If the current paragraph contains section property definitions.
@@ -462,11 +464,17 @@ public:
     void StartParaChange( );
     void EndParaChange( );
 
+    void RemoveDummyParaForTableInSection();
+    void AddDummyParaForTableInSection();
     void RemoveLastParagraph( );
     void SetIsLastParagraphInSection( bool bIsLast );
     bool GetIsLastParagraphInSection();
     void SetIsFirstParagraphInSection( bool bIsFirst );
     bool GetIsFirstParagraphInSection();
+    void SetIsDummyParaAddedForTableInSection( bool bIsAdded );
+    bool GetIsDummyParaAddedForTableInSection();
+    void SetIsTextFrameInserted( bool bIsInserted );
+    bool GetIsTextFrameInserted();
     void SetParaSectpr(bool bParaSectpr);
     bool GetParaSectpr();
 
